<resources>
    <string name="app_name">Re-Estate</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="male">Male</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="residential">Residential</string>
    <string name="industrial">Industrial</string>
    <string name="commercial">Commercial</string>
    <string name="see_all">See All</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorites_found">No favorites found</string>
    <string name="cancel">Cancel</string>
    <string name="yes_remove">Yes, Remove</string>
    <string name="search_appointment">Search appointment</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="reset">Reset</string>
    <string name="google_play">Google Play</string>
</resources>