<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="32px"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.auth.CompleteProfileScreen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:background="@drawable/rounded_corner_outline_bg"
        android:backgroundTint="#46266CFD"
        android:padding="10dp"
        android:layout_gravity="start"
        android:id="@+id/btn_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Complete Your Profile"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_28pt_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Don't worry, only you can see your personal data. No one else will be able to see it"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/inter_28pt_medium"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_image"
                android:id="@+id/profile_image"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/blue"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/select_image"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_28pt_bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edge_bg"
            android:backgroundTint="@color/off_white"
            android:padding="16dp"
            android:hint="@string/app_name"
            android:enabled="false"
            android:inputType="textPersonName"
            android:fontFamily="@font/inter_28pt_medium"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:id="@+id/name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_28pt_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edge_bg"
            android:backgroundTint="@color/off_white">

            <com.hbb20.CountryCodePicker
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:ccp_showNameCode="false"
                app:ccp_showFlag="false"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
                android:id="@+id/country_code"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="16dp"
                android:hint="**** *** ****"
                android:inputType="phone"
                android:fontFamily="@font/inter_28pt_medium"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:id="@+id/phone"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_28pt_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edge_bg"
            android:backgroundTint="@color/off_white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="Select"
                android:textSize="18sp"
                android:fontFamily="@font/inter_28pt_medium"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:id="@+id/gender"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dropdown"
                android:padding="10dp"
                android:layout_gravity="center"
                android:id="@+id/btn_dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:id="@+id/progress_bar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Create Profile"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_28pt_bold"
        app:backgroundTint="@color/blue"
        android:background="@drawable/rounded_corner_bg"
        android:id="@+id/btn_complete"/>

</LinearLayout>