<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:background="@color/off_white"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/profile"
            android:fontFamily="@font/inter_28pt_bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/rounded_edge_bg"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_image"
                android:id="@+id/profile_image"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_edge_bg"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/account_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/account_balance" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_edge_bg"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:drawableStart="@drawable/person"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="Your profile"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:dividerColor="@color/off_white"/>

        <TextView
            android:id="@+id/tv_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:drawableStart="@drawable/wallet"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="Payment Methods"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:dividerColor="@color/off_white"/>

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/chevron_right"
            app:drawableStartCompat="@drawable/settings"
            app:drawableTint="@color/blue" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:dividerColor="@color/off_white"/>

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="@string/help_center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/chevron_right"
            app:drawableStartCompat="@drawable/help"
            app:drawableTint="@color/blue" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:dividerColor="@color/off_white"/>

        <TextView
            android:id="@+id/tv_contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="Privacy Policy"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/chevron_right"
            app:drawableStartCompat="@drawable/contract"
            app:drawableTint="@color/blue" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:dividerColor="@color/off_white"/>

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/inter_28pt_bold"
            android:text="Log out"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/chevron_right"
            app:drawableStartCompat="@drawable/logout"
            app:drawableTint="@color/blue" />

    </LinearLayout>

</LinearLayout>